--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Braco alemán de pelo corto</title>
-    <link rel="shortcut icon" href="/multimedia/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="shortcut icon" href="multimedia/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -16,10 +16,10 @@
         <nav class="menu">
             <ul>
                 <li> <a href="index.html">Inicio</a></li>
-                <li><a href="/pages/historia.html">Historia</a></li>
-                <li><a href="/pages/descripcion.html">Descripcion</a></li>               
-                <li><a href="/pages/ejemplares.html">Ejemplares</a></li>
-                <li><a href="/pages/contacto.html">Contacto</a></li>
+                <li><a href="pages/historia.html">Historia</a></li>
+                <li><a href="pages/descripcion.html">Descripcion</a></li>               
+                <li><a href="pages/ejemplares.html">Ejemplares</a></li>
+                <li><a href="pages/contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
@@ -37,9 +37,9 @@
     <footer>
         <div>
             <ul>
-                <li>Instagram</li>
-                <li>Facebook</li>
-                <li>Whatsapp</li>
+                <li>Instagram <img src="multimedia/instagram_icon_125245.png" alt="igicon"></li>
+                <li>Facebook <img src="multimedia/fb_icon-icons.com_65434.png" alt="fbicon"></li>
+                <li>Whatsapp <img src="multimedia/whatsapp-logo_icon-icons.com_57054.png" alt="wpicon"></li>
             </ul>
         </div>
     </footer>
