--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -25,8 +25,8 @@
     
     <h1>Contacto</h1>
 
-    <main>
-        <form>
+    <main class="formulario">
+        <form class="form">
             <div>
                 <label for="name">Nombre:</label>
                 <input type="text" name="name">
@@ -72,9 +72,9 @@
     <footer>
         <div>
             <ul>
-                <li>Instagram</li>
-                <li>Facebook</li>
-                <li>Whatsapp</li>
+                <li>Instagram <img src="../multimedia/instagram_icon_125245.png" alt="igicon"></li>
+                <li>Facebook <img src="../multimedia/fb_icon-icons.com_65434.png" alt="fbicon"></li>
+                <li>Whatsapp <img src="../multimedia/whatsapp-logo_icon-icons.com_57054.png" alt="wpicon"></li>
             </ul>
         </div>
     </footer>
