--- a/pages/descripcion.html
+++ b/pages/descripcion.html
@@ -28,9 +28,9 @@
     <footer>
         <div>
             <ul>
-                <li>Instagram</li>
-                <li>Facebook</li>
-                <li>Whatsapp</li>
+                <li>Instagram <img src="../multimedia/instagram_icon_125245.png" alt="igicon"></li>
+                <li>Facebook <img src="../multimedia/fb_icon-icons.com_65434.png" alt="fbicon"></li>
+                <li>Whatsapp <img src="../multimedia/whatsapp-logo_icon-icons.com_57054.png" alt="wpicon"></li>
             </ul>
         </div>
     </footer>
