--- a/pages/historia.html
+++ b/pages/historia.html
@@ -25,6 +25,15 @@
 
             Con las características cinegéticas fijadas, los criadores alemanes iniciaron la labor de seleccionar a los perros por su tipo, y llegando a finales del siglo XIX al primer estándar racial, el cual con el tiempo, ha sufrido modificaciones para adaptarlo a la natural evolución de las formas de caza.</p>
     </main>
+    <footer>
+        <div>
+            <ul>
+                <li>Instagram <img src="../multimedia/instagram_icon_125245.png" alt="igicon"></li>
+                <li>Facebook <img src="../multimedia/fb_icon-icons.com_65434.png" alt="fbicon"></li>
+                <li>Whatsapp <img src="../multimedia/whatsapp-logo_icon-icons.com_57054.png" alt="wpicon"></li>
+            </ul>
+        </div>
+    </footer>
     
 </body>
 </html>
